<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/register_img"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:layout_width="299dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/edittext_border"
                android:hint="@string/email_hint"
                android:inputType="text"
                android:textSize="14sp"
                android:paddingStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="start" />

            <EditText
                android:layout_width="299dp"
                android:layout_height="48dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:paddingStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_text"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="start" />

            <EditText
                android:layout_width="299dp"
                android:layout_height="48dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:paddingStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_text"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="start" />

            <EditText
                android:layout_width="299dp"
                android:layout_height="48dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/phone_number_hint"
                android:inputType="number"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:paddingStart="8dp"/>

            <CheckBox
                android:id="@+id/agreeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnc_checkbox"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:backgroundTint="#005778"
            android:text="@string/register_button"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_hv_acc"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

</ScrollView>