<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AEEF"
    tools:context=".ReportLostItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:maxWidth="200dp"
                    android:background="@drawable/search_bar_border"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:textSize="11sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:src="@drawable/notif_icon"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    android:layout_marginStart="5dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:src="@drawable/profile_icon"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:layout_marginTop="25dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_bg1"
                    android:layout_gravity="bottom" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="90dp"
                    android:gravity="center">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rectangle_bg5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="35dp"
                            android:layout_marginEnd="35dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="20dp">

                                <TextView
                                    android:id="@+id/name"
                                    android:layout_width="0dp"
                                    android:layout_height="20dp"
                                    android:text="@string/name"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:autoSizeTextType="uniform"
                                    android:autoSizeMinTextSize="10dp"
                                    android:autoSizeMaxTextSize="15dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintBottom_toTopOf="@id/name_field"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginStart="20dp"/>

                                <EditText
                                    android:id="@+id/name_field"
                                    android:layout_width="0dp"
                                    android:layout_height="48dp"
                                    android:hint="@string/name_hint"
                                    android:layout_weight="1"
                                    android:maxWidth="200dp"
                                    android:background="@drawable/edittext_border"
                                    android:textSize="13sp"
                                    android:paddingStart="8dp"
                                    android:paddingEnd="8dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/name"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginEnd="20dp"/>

                                <TextView
                                    android:id="@+id/phone_number"
                                    android:layout_width="0dp"
                                    android:layout_height="20dp"
                                    android:text="@string/phone_number"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:autoSizeTextType="uniform"
                                    android:autoSizeMinTextSize="10dp"
                                    android:autoSizeMaxTextSize="15dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/name_field"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginTop="5dp"/>

                                <EditText
                                    android:id="@+id/phone_field"
                                    android:layout_width="0dp"
                                    android:layout_height="48dp"
                                    android:hint="@string/phone_number_hint"
                                    android:layout_weight="1"
                                    android:maxWidth="200dp"
                                    android:background="@drawable/edittext_border"
                                    android:textSize="13sp"
                                    android:paddingStart="8dp"
                                    android:paddingEnd="8dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/phone_number"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginEnd="20dp"/>

                                <TextView
                                    android:id="@+id/item_type"
                                    android:layout_width="0dp"
                                    android:layout_height="20dp"
                                    android:text="@string/item_type"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:autoSizeTextType="uniform"
                                    android:autoSizeMinTextSize="10dp"
                                    android:autoSizeMaxTextSize="15dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/phone_field"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginTop="5dp"/>

                                <EditText
                                    android:id="@+id/item_type_field"
                                    android:layout_width="0dp"
                                    android:layout_height="48dp"
                                    android:hint="@string/item_type_hint"
                                    android:layout_weight="1"
                                    android:maxWidth="200dp"
                                    android:background="@drawable/edittext_border"
                                    android:textSize="13sp"
                                    android:paddingStart="8dp"
                                    android:paddingEnd="8dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/item_type"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginEnd="20dp"/>

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </FrameLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/add_img"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="60dp"
                            android:layout_marginTop="20dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <android.widget.Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:textColor="@color/white"
                        android:background="@drawable/rectangle_bg6"
                        android:text="@string/submit_button"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:enabled="true"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_bg4"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/nav_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/home_icon"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text"
                    android:textColor="#000000"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/history_icon"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_text"
                    android:textColor="#000000"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_bg"
                        android:layout_gravity="center" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/scanner_icon"
                        android:layout_gravity="center" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanner_text"
                    android:textColor="#000000"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/cs_icon"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cs_text"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/help_icon"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text"
                    android:textColor="#000000"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>